--- a/3-4/plot.ipynb
+++ b/3-4/plot.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "526d1520-4424-4a64-a9ef-97d843cd571b",
+   "execution_count": 1,
+   "id": "460127e9-b8cb-4b45-b52a-ebfc4a58fc37",
    "metadata": {},
    "outputs": [
     {
@@ -45,17 +45,8 @@
     "plt.title('Závislost ln k na 1/T')\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f869696-952a-4a33-a279-a50251ca2edc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
